# gas-price-etl

./: .gitignore  README.md  pyproject.toml
dags/: auto_xcom_dag.py  manual_xcom_dags.py
src/: extract.py  load.py  main.py  transform.py
src/config/: settings.py
src/db/: database.py  schema.py
