[project]
name = "gas-price-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
]
